@@ -868,10 +868,14 @@ own it, and what it is too.
   \addcontentsline{toc}{subsection}{2.10~~~Doctest Blocks}%
   \label{doctest-blocks}%
 }
-\begin{verbatim}>>> print 'Python-specific usage examples; begun with ">>>"'
-Python-specific usage examples; begun with ">>>"
->>> print '(cut and pasted from interactive Python sessions)'
-(cut and pasted from interactive Python sessions)\end{verbatim}
+%
+\begin{quote}{\ttfamily \raggedright \noindent
+>{}>{}>~print~'Python-specific~usage~examples;~begun~with~">{}>{}>"'\\
+Python-specific~usage~examples;~begun~with~">{}>{}>"\\
+>{}>{}>~print~'(cut~and~pasted~from~interactive~Python~sessions)'\\
+(cut~and~pasted~from~interactive~Python~sessions)
+}
+\end{quote}
 
 
 %___________________________________________________________________________
